# QtAjuster

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  parametermodel.cpp  parametermodel.h
